[test]

[install]

[versioneer]
VCS                = git
style              = git-describe
tag_prefix         = v
versionfile_source = src/pds/my_pds_module/_version.py
versionfile_build  = pds/my_pds_module/_version.py
parentdir_prefix   = pds.my_pds_module-


# For future consideration:
#
# - Move declarative metadata out of `setup.py` and into here
# - Add `[options]` for zip-safe use, package metadata

